mType/tests/testFiles/error/pass/validFunctionDeclaration.mt
function add(int a, int b): int {
    return a + b;
}

int result = add(5, 3);
print(result);
print("Test passed");